syntax = "proto3";

package pt.ulisboa.tecnico.DADTKV.TmService;
import public "protos/Structures.proto";


message TxRequest {
  string id = 1;
  repeated string reads = 2;
  repeated DadIntProto writes = 3;
}

message TxReply {
	repeated DadIntProto reads = 1;
}

service TmService {
  rpc TxSubmit (TxRequest) returns (TxReply);
}
